# archgraf

./: .gitignore  CMakeLists.txt
assets/: INSTRUKCJA_MEBLE.md
opisy/: faza1.md  faza2.md  faza3.md  faza4.md  faza5.md  glowny.md
shaders/: flat.frag  flat.vert  phong.frag  phong.vert
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/rendering/: Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Texture.cpp  Texture.h
src/scene/: Door.cpp  Door.h  Furniture.cpp  Furniture.h  FurnitureLibrary.cpp  FurnitureLibrary.h  InnerWall.cpp  InnerWall.h  Outline.h  RoomWindow.cpp  RoomWindow.h  Wall.cpp  Wall.h
src/ui/: Panel.cpp  Panel.h
